// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EndpointsFactory .build() Should create an endpoint with intersection middleware 1`] = `
Object {
  "_type": "ZodObject",
  "shape": Object {
    "n1": Object {
      "_type": "ZodNumber",
    },
    "n2": Object {
      "_type": "ZodNumber",
    },
    "s": Object {
      "_type": "ZodString",
    },
  },
}
`;

exports[`EndpointsFactory .build() Should create an endpoint with intersection middleware 2`] = `
Object {
  "_type": "ZodObject",
  "shape": Object {
    "b": Object {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`EndpointsFactory .build() Should create an endpoint with simple middleware 1`] = `
Object {
  "_type": "ZodObject",
  "shape": Object {
    "n": Object {
      "_type": "ZodNumber",
    },
    "s": Object {
      "_type": "ZodString",
    },
  },
}
`;

exports[`EndpointsFactory .build() Should create an endpoint with simple middleware 2`] = `
Object {
  "_type": "ZodObject",
  "shape": Object {
    "b": Object {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`EndpointsFactory .build() Should create an endpoint with union middleware 1`] = `
Object {
  "_type": "ZodObject",
  "shape": Object {
    "n1": Object {
      "_type": "ZodOptional",
      "value": Object {
        "_type": "ZodNumber",
      },
    },
    "n2": Object {
      "_type": "ZodOptional",
      "value": Object {
        "_type": "ZodNumber",
      },
    },
    "s": Object {
      "_type": "ZodString",
    },
  },
}
`;

exports[`EndpointsFactory .build() Should create an endpoint with union middleware 2`] = `
Object {
  "_type": "ZodObject",
  "shape": Object {
    "b": Object {
      "_type": "ZodBoolean",
    },
  },
}
`;
